# ai4se_gnusarev_1

./: .gitignore  README.md  pyproject.toml
data/: prepared_data_test.xlsx  prepared_data_train.xlsx
notebooks/: first_exploration.ipynb
src/ai4se_gnusarev_1/: consts.py  main.py
src/ai4se_gnusarev_1/internal/dataset/: main.py  split.py
src/ai4se_gnusarev_1/internal/dataset/preprocess/: __init__.py  consts.py  main.py
src/ai4se_gnusarev_1/internal/models/: __init__.py
src/ai4se_gnusarev_1/internal/models/bert/: __init__.py  consts.py  data.py  dataset.py  train.py
src/ai4se_gnusarev_1/internal/models/bert/configs/roberta_case/: initial.yaml
src/ai4se_gnusarev_1/internal/models/random_forest/: __init__.py  save.py  search_params.py  train.py
src/ai4se_gnusarev_1/internal/models/random_forest/configs/: initial_model.yaml
src/ai4se_gnusarev_1/internal/models/random_forest/configs/initial_model/: search_params.yaml  train_params.yaml
