[tool.poetry]
name = "ai4se-gnusarev-1"
version = "0.1.0"
description = ""
authors = ["Sergey Gnusarev <sagnusaryov@edu.hse.ru>"]
readme = "README.md"
packages = [{include = "ai4se_gnusarev_1", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.34.0"
fastexcel = "^0.16.0"
tqdm = "^4.67.1"
xlsxwriter = "^3.2.9"
numpy = "^2.3.4"
scikit-learn = "^1.7.2"
pyyaml = "^6.0.3"
optuna = "^4.5.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^7.0.1"
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py312"
